fix search bar layout and spacing

--- a/client/css/less/components/header.less
+++ b/client/css/less/components/header.less
@@ -44,6 +44,7 @@ header {
       display: inline-block;
       position: relative;
       margin-right: 10px;
+      vertical-align: middle;
 
       &.large a { width: 34px; }
 
